syntax = "proto3";
package pb;
import "trip.proto";

service BillingService {
  rpc GenBill(GenBillReq) returns (GenBillResp);
  rpc GetBillList(GetBillReq) returns (GetBillResp);
}

message BillMsg {
  int64 bill_num = 1;
  float price = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  string origin = 5;
  string destination = 6;
  string passenger_name = 7;
  string driver_name = 8;
  bool payed = 9;
}

message GenBillReq {
  TripMsg trip_msg = 1;
}

message GenBillResp {
  bool status = 1;
  BillMsg bill_msg = 2;
}

message GetBillReq {
  int64 user_id = 1;
}

message GetBillResp {
  repeated BillMsg bill_list= 1;
}